# raylib_base_template

./: .gitignore  CMakeLists.txt  README.md  anim_doc.cfg  vs_setup.bat
.github/workflows/: build_linux.yml  build_macos.yml  build_webassembly.yml  build_windows.yml
anims/: MAIN_MENU.cfg  _library.cfg  _test_scene.cfg  _test_scene2.cfg  mouse_ripple.cfg  new_anim.cfg  signal_test.cfg  test2.cfg  zooming_box.cfg
box2d/: CMakeLists.txt  create_sln.bat
include/: easing.h  librg.h  sound_effect.h  sprite.h  sprite_raylib.h  tilemap.h
projects/: box2d.vcxproj
projects/VS2022/: raylib_game.sln
projects/VS2022/box2d/: box2d.vcxproj  box2d.vcxproj.filters
projects/VS2022/raylib/: raylib.vcxproj
projects/VS2022/raylib_game/: raylib_game.vcxproj  raylib_game.vcxproj.filters
src/: CMakeLists.txt  Makefile  Makefile.Android  base_template.rc  main.c
src/anim/: anim.c  anim.h  anim_io.c  anim_io.h  anim_library.c  anim_library.h  anim_scene.h  anim_signal.h  anim_stage.c  anim_stage.h
src/anim/DEPRECATED_scene_anim/: scene_anim.c  scene_anim.h
src/anim_editor/: anim_editor.c  anim_editor.h
src/anim_stage/: anim_scene.c  anim_scene.h  anim_stage.c  anim_stage.h
src/app_state/: app_state.c  app_state.h
src/audio_state/: audio_state.c  audio_state.h
src/box2d_wrap/: box2d_body_shape.c  box2d_raylib.c  box2d_world.c  box2d_wrap.h
src/easing/: easing.c
src/examples/enet_example/: enet_example.c  enet_example.h  enet_script.c
src/examples/input_rebind_example/: input_rebind_example.c
src/examples/mouse_coordinates/: mouse_coordinates.c
src/examples/platformer_test/: platformer_level.c  platformer_physics.c  platformer_physics.h  platformer_test.c  platformer_types.h
src/examples/post_process_shader_example/: post_process_shader_example.c
src/examples/sfx_example/: sfx_example.c
src/examples/simple_save_example/: simple_save_example.c
src/examples/sprite_example/: sprite_example.c
src/examples/tilemap_editor_example/: tilemap_editor_example.c  tilemap_example_common.h  tilemap_example_drag.c  tilemap_example_editor.c  tilemap_example_grid.c  tilemap_example_paint.c  tilemap_example_region.c  tilemap_example_resize.c  tilemap_example_ruletile.c  tilemap_example_tilemap.c  tilemap_example_tileset.c
src/examples/tilemap_example_editor/: tilemap_example_atlas.c  tilemap_example_drag.c  tilemap_example_editor.c  tilemap_example_grid.c  tilemap_example_paint.c  tilemap_example_region.c  tilemap_example_resize.c  tilemap_example_ruletile.c  tilemap_example_tile.c  tilemap_example_tilemap.c  tilemap_example_tileset.c
src/include/: common_types.h  easing.h  simple_save.h  sound_effect.h  sound_effect_raylib.h  sprite.h  sprite_raylib.h  temporary_allocator.h  tilemap.h  tilemap_raylib.h  viewport_rect.h
src/input/: input.c  input.h
src/main_menu/: main_menu.c
src/mouse_test/: mouse_test.c
src/networking/: networking.c
src/placeholder_state/: placeholder_state.c
src/platformer_test/: platformer_constants.h  platformer_level.c  platformer_physics.c  platformer_physics.h  platformer_test.c  platformer_types.h
src/scene_anim/: scene_anim.c  scene_anim.h
src/screen_state/: screen_state.c  screen_state.h
src/settings_state/: settings_state.c  settings_state.h
src/signal/: anim_signal.c  anim_signal.h  signal.c  signal.h
src/strategy_test/: strategy_ai.c  strategy_defs.c  strategy_defs.h  strategy_effects.c  strategy_test.c  strategy_types.h  strategy_world.c  strategy_world.h
src/tilemap_system/: tilemap_system.c
src/transition/: transition_state.c  transition_state.h
tests/: anim_tests.c
